cmake_minimum_required(VERSION 3.25)
project(OpenGL_Render)

#set(CMAKE_BUILD_TYPE RELEASE)
if (${CMAKE_GENERATOR} MATCHES "Visual Studio")
    set(CMAKE_RUNTIME_OUTPUT_DIRECTORY $<1:${CMAKE_SOURCE_DIR}/bin>)
else()
    set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_SOURCE_DIR}/Bin)
endif()
set(LIBRARY_OUTPUT_PATH ${CMAKE_SOURCE_DIR}/Lib)
option(Z_USE_OPENGL ON)
set(CMAKE_POLICY_DEFAULT_CMP0077 NEW)
set(CMAKE_CXX_STANDARD 17)
link_directories(${CMAKE_SOURCE_DIR}/Lib)
include_directories(${CMAKE_SOURCE_DIR}/Include
        ${CMAKE_SOURCE_DIR}/Include/glad
        ${CMAKE_SOURCE_DIR}/Include/glfw/include
        ${CMAKE_SOURCE_DIR}/OpenGL dep)
set(ASSIMP_BUILD_ALL_EXPORTERS_BY_DEFAULT OFF)
set(ASSIMP_BUILD_ALL_IMPORTERS_BY_DEFAULT OFF)
set(ASSIMP_BUILD_FBX_IMPORTER ON)
set(ASSIMP_BUILD_OBJ_IMPORTER ON)
set(ASSIMP_BUILD_COLLADA_IMPORTER ON)
set(ASSIMP_BUILD_TESTS OFF)
set(ASSIMP_WARNINGS_AS_ERRORS OFF)
set(ASSIMP_BUILD_TESTS OFF)
set(ASSIMP_INSTALL OFF)
set(ASSIMP_NO_EXPORT ON)
add_compile_definitions(GLM_ENABLE_EXPERIMENTAL)
add_subdirectory(Include)

add_subdirectory(src)
add_compile_definitions(-w)
