cmake_minimum_required(VERSION 3.20)


add_subdirectory(glad)
add_subdirectory(glfw)
find_package(assimp QUIET)
if(!assimp_FOUND)
    set(ASSIMP_WARNINGS_AS_ERRORS OFF)
    add_subdirectory(assimp)
endif ()
add_subdirectory(imgui)
add_subdirectory(OpenGL)
add_dependencies(OpenGLLib glad glfw ImGui)
add_subdirectory(Model)
add_subdirectory(Camera)
add_compile_definitions(-w)